# text-table

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  text-table.cabal
src/Text/: Table.hs
src/Text/Table/: Cell.hs  Class.hs
test/: test-text-table.hs
